# agentic-harness

./: .gitignore  harness.config.yaml  pyproject.toml
.claude/: settings.json
.claude/rules/: testing.rule.md
src/: __init__.py  bootstrap.py
src/config/: __init__.py  schema.py
src/config/fixtures/: invalid-config.yaml  test-config.yaml
src/modules/context/: diagram.py  expertise.py  handoff.py  prime.py  scoped_rules.py
src/modules/evolution/: commit.py  postmortem.py
src/modules/multi_agent/: afk_loop.py  council.py  notify.py  review.py  routing.py  tournament.py  worktree.py
src/modules/planning/: grill.py  issues.py  plan_feature.py  prd.py
src/modules/reset_recovery/: reset.py
src/modules/tdd/: tdd_skill.py
src/modules/validation/: auto_commit.py  stop_hook.py  validate.py
src/modules/validation/fixtures/: clean_sample.py  lint_violation_sample.py  type_error_sample.py
tests/: test_afk_loop.py  test_auto_commit.py  test_bootstrap.py  test_commit.py  test_config_schema.py  test_council.py  test_diagram.py  test_expertise.py  test_handoff.py  test_integration.py  test_notify.py  test_planning.py  test_postmortem.py  test_prime.py  test_reset_recovery.py  test_review.py  test_routing.py  test_scoped_rules.py  test_stop_hook.py  test_tdd_skill.py  test_tournament.py  test_validate.py  test_worktree.py
